Redesign: bigger hero, visible skull bg, kill AI copy, strip to essentials

--- a/index.html
+++ b/index.html
@@ -14,17 +14,10 @@
   <div class="glow glow-1"></div>
   <div class="glow glow-2"></div>
 
-  <header>
-    <div class="logo">
-      <span class="logo-text">BLUEMANIA</span>
-      <span class="logo-sub">sounds from the deep</span>
-    </div>
-  </header>
-
   <main>
     <section class="hero">
+      <div class="hero-bg"></div>
       <h1>BLUEMANIA</h1>
-      <p class="tagline">Where melody drowns in static and resurfaces as something else entirely.</p>
     </section>
 
     <section class="albums" id="albums">
@@ -41,9 +34,7 @@
     </section>
 
     <section class="about">
-      <h2>About</h2>
-      <p>Bluemania is an experiment in sound — genre-fluid, mood-driven, occasionally unhinged. Born somewhere between late nights and early mornings, these tracks exist because they had to.</p>
-      <p>No label. No rules. Just music.</p>
+      <p>Ten tracks. One sitting. No second takes.</p>
     </section>
   </main>
 
