Lighter bg art, smoke text effect, add '2006, Brooklyn - NY', remove about copy

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section class="hero">
       <div class="hero-bg"></div>
       <h1>BLUEMANIA</h1>
+      <p class="hero-subtitle">2006, Brooklyn — NY</p>
     </section>
 
     <section class="albums" id="albums">
@@ -33,9 +34,8 @@
       <div class="tracklist" id="tracklist"></div>
     </section>
 
-    <section class="about">
-      <p>Ten tracks. One sitting. No second takes.</p>
-    </section>
+    <!-- -->
+
   </main>
 
   <footer>
