Add real about copy at bottom

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <div class="tracklist" id="tracklist"></div>
     </section>
 
-    <!-- -->
+    <section class="about">
+      <p>Bluemania is the sound of 2006. In bedrooms, on software, between exams, road trips, and hot summer nights. Now resurrected with AI collaboration, years of chat archives, and twenty years of hindsight.</p>
+    </section>
 
   </main>
 
