2006 left, Brooklyn NY right, larger white text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <section class="hero">
       <div class="hero-bg"></div>
       <h1>BLUEMANIA</h1>
-      <p class="hero-subtitle">2006, Brooklyn — NY</p>
+      <div class="hero-subtitle">
+        <span class="sub-left">2006</span>
+        <span class="sub-right">Brooklyn, NY</span>
+      </div>
     </section>
 
     <section class="albums" id="albums">
