Fix: Melbourne, not Sydney

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h2>About</h2>
       <div class="about-content">
         <p>Bluemania is the solo project of <a href="https://ndjenkins.com" target="_blank" rel="noopener">Nick Jenkins</a>.</p>
-        <p>Between 2003 and 2009, two friends in Sydney spent their evenings making music on laptops — between exams, road trips, and late-night MSN conversations. The tracks were rough, weird, and never finished. They lived on hard drives and in chat logs for almost twenty years.</p>
+        <p>Between 2003 and 2009, two friends in Melbourne, Australia spent their evenings making music on laptops — between exams, road trips, and late-night MSN conversations. The tracks were rough, weird, and never finished. They lived on hard drives and in chat logs for almost twenty years.</p>
         <p>In 2026, those original cuts were reimagined and remastered with majority AI assistance using <a href="https://suno.com" target="_blank" rel="noopener">Suno</a>. The track names, the album title, even the concept — all pulled from real chat archives. <em>"We need to sit down and analyse these 'dinner with chris' tracks"</em> was a real message from 2006.</p>
         <p>This is what happens when you finally finish something you started twenty years ago.</p>
       </div>
